--- a/viz.yaml
+++ b/viz.yaml
@@ -32,7 +32,7 @@ info:
   required-packages:
     vizlab:
       repo: CRAN
-      version: 0.2.0
+      version: 0.2.2.9005
     sf:
       repo: CRAN
       version: 0.5-4
@@ -202,7 +202,7 @@ publish:
   -
     id: processing-schematic
     location: images/processing_schematic.gif
-    mimetype: image/png
+    mimetype: image/gif
     export: true
     title: "GDP Processing Schematic"
     alttext: "GDP Processing Schematic"
